solve the background image issue

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ permalink: /
   <h1 class="alt-h1 mb-4 intro-title">National Infrastructure Systems Model (NISMOD)</h1>
   <a href="{{ site.baseurl }}/about/" class="btn btn-outline-primary sky-blue-accent" style="border-color: #3490dc; color: #3490dc;">Learn More</a>
 </div>
+</div><!-- ends .full-width that started in header.html -->
 
 <section class="bg-gray-light py-5">
   <div class="container-lg p-responsive text-center">
